--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,13 +7,14 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title><%= current_page.data.title || "Lucy Bain" %></title>
 
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag  "all" %>
   </head>
 
   <body class="<%= page_classes %>">
+    <%= partial "layouts/shared/header" %>
     <%= yield %>
   </body>
 </html>
