--- a/source/layouts/shared/_header.haml
+++ b/source/layouts/shared/_header.haml
@@ -1,6 +1,6 @@
 .header
   %ul.nav
     %li
-      =link_to 'Me', '/'
+      =nav_link 'Me', '/'
     %li
-      =link_to 'Pages', '/pages'
+      =nav_link 'Pages', '/pages'
