working on sub pages

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -18,3 +18,7 @@
       li
         display: block
         margin: 15px 0px 0px 0px
+
+@media (max-width: $small-mobile)
+  .github
+    display: none
