Better way of doing the index pages

--- a/source/pages/index.haml
+++ b/source/pages/index.haml
@@ -1,8 +1,5 @@
-index page
-- index_links('pages') do |link|
-  %li
-    = link
-
 - current_page.children.each do |p|
-  =p.inspect
-  =link_to 'title', p.path
+  %h2= link_to page_title(p), path_to_link(p.path)
+  - if p.data.summary.present?
+    %p
+      = p.data.summary
