sample page for styling

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -6,6 +6,7 @@
     %link{href: "images/favicon.ico", rel: "icon", type: "image/ico"}/
     %title= current_page.data.title || "Lucy Bain"
     = stylesheet_link_tag "application"
+    = stylesheet_link_tag "code"
     = javascript_include_tag  "all"
   %body{class: page_classes}
     = partial "layouts/shared/header"
