styling - thanks Benjamin

--- a/source/pages/RailsGirls-helpful-info.haml
+++ b/source/pages/RailsGirls-helpful-info.haml
@@ -8,7 +8,16 @@ summary: "RG summary"
   %div
     Here are some sample paragraphs:
   %p
-    Aliquam lectus ligula, fermentum sed dolor quis, porttitor condimentum purus. Duis rutrum neque non blandit ultricies. Proin quis dui sit amet metus tincidunt dictum in id nunc. Nunc sed iaculis quam. Nulla sit amet luctus nulla. Nunc vitae purus viverra, sodales mauris eget, porttitor lorem. Donec euismod elementum quam non pharetra. Praesent neque neque, ultricies at est vestibulum, consequat eleifend diam. Cras imperdiet tempus dolor eu rutrum. In lectus mauris, consectetur eu elit vel, elementum ultrices urna. Nunc sed odio vel arcu consectetur auctor at id velit. Aliquam non tincidunt dolor. Pellentesque adipiscing ipsum libero, vel feugiat quam ultrices eget. Fusce placerat odio ut nisi suscipit, eu laoreet eros rutrum. Donec leo tortor, scelerisque ut erat et, facilisis aliquet lacus.
+    The global pool of wealth is bigger than ever. Credit Suisse’s 2013 Global Wealth Report puts it at $241 trillion, or 68 percent bigger than a decade ago. That’s not to say that it is being spread more evenly—10 percent of <b>the world’s population possesses 86 percent of the money.</b> Wealth is being created and stockpiled so fast, the report projects, that in just two generations’ time, there could be 1 billion millionaires in the world. That means roughly 1 in 5 adults could soon call themselves a millionaire.
+  %h2
+    Billionaires
+  %p
+    Even billionaires aren’t the exotic species they once were. According to Forbes, there are 1,426 of them today, with more than 200 of them having reached 10-figure status in the last year alone. When Forbes started its billionaire list 25 years ago, there were only 140. It’s hard to imagine the likes of Evan Spiegel, 23-year-old co-founder of Snapchat, turning down multibillion-dollar offers from Google and Facebook even a couple of years ago. Hitting the 10-figure mark: not as cool as it used to be.
+  %h3
+    Even China has rare earth metals
+  %p
+    China has a virtual Rockefeller-like monopoly on rare Earth metals.
+    It wasn’t always so easy. When John D. Rockefeller rose from a clerk earning 50 cents a day at a produce company to become the world’s first billionaire a century ago, the fortune he amassed would have made Bill Gates swoon. In 1918, Rockefeller’s taxable income was a staggering $33 million, or slightly more than $550 million in today’s dollars. That dwarfs Warren Buffett’s 2010 tax bill, where he paid just under $7 million on $40 million in taxable income. At the time, Rockefeller’s fortune alone amounted to 1.53 percent of the U.S. economy, the equivalent of some $350 billion today.
   %p
     Nulla facilisi. Nunc sodales lacus ac neque interdum, non vehicula quam auctor. Maecenas blandit lectus ut imperdiet malesuada. Etiam euismod tristique augue, quis placerat tortor porta ac. Aliquam non dolor eget sem viverra porta. Vestibulum faucibus iaculis placerat. Nulla sed purus hendrerit, varius lacus sit amet, imperdiet nulla. In hac habitasse platea dictumst.
   %div
@@ -20,16 +29,15 @@ summary: "RG summary"
       Second
     %li
       Donec euismod elementum quam non pharetra. Praesent neque neque, ultricies at est vestibul
+  %ol
     %li
-      %ol
-        %li
-          Wow, lists within lists!
-        %li
-          This one has numbers
-        %li
-          such a great list
-        %li
-          Porta ac. Aliquam non dolor eget sem viverra porta. Vestibulum faucibus iaculi
+      Wow, lists within lists!
+    %li
+      This one has numbers
+    %li
+      such a great list
+    %li
+      Porta ac. Aliquam non dolor eget sem viverra porta. Vestibulum faucibus iaculi
   %div
     And perhaps some links
   %p
