--- a/source/stylesheets/nav.sass
+++ b/source/stylesheets/nav.sass
@@ -2,12 +2,17 @@
   text-align: center
   list-style: none
   padding: 0
-  margin-bottom: 50px
+
   li
     display: inline
     margin-right: 15px
+
+  a
+    font-weight: $bold
+
   li:last-child
     margin-right: 0px
+
   @media (max-width: $medium-mobile)
     li.home
       display: inline
