--- a/source/stylesheets/normalize.sass
+++ b/source/stylesheets/normalize.sass
@@ -1,3 +1,6 @@
+p, h1, h2, h3, h4
+  margin: 0px
+
 /*! normalize.css v2.1.2 | MIT License | git.io/normalize
 
 /* ==========================================================================
