Some quick fixes to build the raw html TODO: don't understand the weird sass requirement

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,6 +1,7 @@
-.github
-  =link_to 'https://github.com/you' do
-    =image_tag 'https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png', style: "position: absolute; top: 0; right: 0; border: 0;", alt: "Fork me on GitHub"
+- if false
+  .github
+    =link_to 'https://github.com/you' do
+      =image_tag 'https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png', style: "position: absolute; top: 0; right: 0; border: 0;", alt: "Fork me on GitHub"
 
 .personal-info
   .photo
