--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -1,15 +1,8 @@
+// Yanone Kaffeesatz - for title font
 @import normalize
 
-$small-mobile: 400px
-$medium-mobile: 500px
-$large-mobile: 900px
-$large-screen: 1200px
+@import variables
 
-$white: #fff
-$light-gray: #888
-$dark-gray: #333
-$accent: #C93C67
-$bold: 700
 
 body
   background: $white
