add some pages so there's something to show

--- a/source/pages/git-info.haml
+++ b/source/pages/git-info.haml
@@ -1,5 +1,5 @@
 ---
-summary: "Helpful tips, tricks, and links about Git and Github."
+summary: "Helpful links about Git and Github."
 ---
 
 .links
@@ -7,8 +7,21 @@ summary: "Helpful tips, tricks, and links about Git and Github."
     Links
   %ol
     %li
+      Official website for
       =link_to 'Git', 'http://git-scm.com/'
-/ git - the simple guide
-/ Git Cheat Sheet
-/ Try Git
-/ git ready
+    %li
+      =link_to 'git - the simple guide', 'http://rogerdudler.github.io/git-guide/'
+      gives a simple, clear, and cheeky overview of git
+    %li
+      =link_to 'Git Cheat Sheet', 'http://scotch.io/bar-talk/git-cheat-sheet'
+      might be handy to keep a print out of until you memorize some common commands
+    %li
+      =link_to 'Try Git', 'http://try.github.io/levels/1/challenges/1'
+      with an interactive tutorial
+    %li
+      =link_to 'git ready', 'http://gitready.com/'
+      gives a few streams (beginner, intermediate, etc.) to learn Git. Not as beginner friendly, but more human than the offical Git website.
+    %li
+      My
+      =link_to 'Into to Git', 'https://docs.google.com/presentation/d/1XyJ9nkeDC4WiMfHqW8f8eWKRPSCcRWMnaRTwJ-L5TdM/edit?usp=sharing'
+      presentation
