update to include header navigation

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -9,6 +9,6 @@
     = stylesheet_link_tag "code"
     = javascript_include_tag  "all"
   %body{class: page_classes}
-    = partial "layouts/shared/header" if false
+    = partial "layouts/shared/header"
     = yield
     =# partial "layouts/shared/footer"
