--- a/source/pages/git-info.haml
+++ b/source/pages/git-info.haml
@@ -20,7 +20,7 @@ summary: "Helpful links about Git and Github."
       with an interactive tutorial
     %li
       =link_to 'git ready', 'http://gitready.com/'
-      gives a few streams (beginner, intermediate, etc.) to learn Git. Not as beginner friendly, but more human than the offical Git website.
+      provies a few streams (beginner, intermediate, etc.) to learn Git. Not as beginner friendly, but more human than the offical Git website.
     %li
       My
       =link_to 'Into to Git', 'https://docs.google.com/presentation/d/1XyJ9nkeDC4WiMfHqW8f8eWKRPSCcRWMnaRTwJ-L5TdM/edit?usp=sharing'
