get rid of weird underline issue on nav

--- a/source/pages/git-info.haml
+++ b/source/pages/git-info.haml
@@ -23,5 +23,5 @@ summary: "Helpful links about Git and Github."
       provies a few streams (beginner, intermediate, etc.) to learn Git. Not as beginner friendly, but more human than the offical Git website.
     %li
       My
-      =link_to 'Into to Git', 'https://docs.google.com/presentation/d/1XyJ9nkeDC4WiMfHqW8f8eWKRPSCcRWMnaRTwJ-L5TdM/edit?usp=sharing'
+      =link_to 'into to Git', 'https://docs.google.com/presentation/d/1XyJ9nkeDC4WiMfHqW8f8eWKRPSCcRWMnaRTwJ-L5TdM/edit?usp=sharing'
       presentation
