--- a/source/stylesheets/header.sass
+++ b/source/stylesheets/header.sass
@@ -2,6 +2,9 @@
 
 .header
   .nav li
+    padding: 0 3px 2px 3px
+    a:hover
+      text-decoration: none
+      border-bottom: 3px solid $accent
     .active
-      padding: 0 3px 2px 3px
       border-bottom: 3px solid $accent
