--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -6,7 +6,7 @@
 
 body
   background: $white
-  font-family: 'Lato', sans-serif
+  font-family: 'Nobile', sans-serif
   color: $dark-gray
 
 a
@@ -18,7 +18,7 @@ a
     text-decoration: underline
 
 b, strong, bold
-  font-weight: 700
+  font-weight: $bold
 
 
 #main
