--- a/source/stylesheets/nav.sass
+++ b/source/stylesheets/nav.sass
@@ -8,9 +8,7 @@
   li
     display: inline
     margin-right: 15px
-
-  a
-    font-weight: $bold
+    font-size: 24px
 
   li:last-child
     margin-right: 0px
