--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -1,9 +1,10 @@
 !!!
 %html
   %head
-    %meta{charset: "utf-8"}/
-    %meta{content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
-    %link{href: "images/favicon.ico", rel: "icon", type: "image/ico"}/
+    %meta{charset: "utf-8"}
+    %meta{content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
+    %link{href: "images/favicon.ico", rel: "icon", type: "image/ico"}
+    %link{href: "http://fonts.googleapis.com/css?family=Crimson+Text:400,700|Nobile:400,700", rel: "stylesheet", type: "text/css"}
     %title= current_page.data.title || "Lucy Bain"
     = stylesheet_link_tag "application"
     = stylesheet_link_tag "code"
