--- a/source/stylesheets/page.sass
+++ b/source/stylesheets/page.sass
@@ -6,18 +6,19 @@
   padding: 30px
   font-size: 26px
   line-height: 1.75em
-  // font-family: 'Merriweather', sans-serif
   font-family: 'Crimson Text', sans-serif
-  // font-family: 'Gentium Book Basic', sans-serif
   -webkit-font-smoothing:  antialiased
 
   p
     margin: 10px 0px 20px
 
+  h1, h2, h3, h4
+    font-family: 'Nobile', sans-serif
+    font-weight: $normal-weight
+
   h1
     font-size: 2.5em
     line-height: 1em
-    font-weight: 400
     margin: 20px 0px 40px
 
   h2
