retro blogging TDD day 1

--- a/source/layouts/shared/_header.haml
+++ b/source/layouts/shared/_header.haml
@@ -4,4 +4,5 @@
       =nav_link 'Me', '/'
     %li
       =nav_link 'Useful Stuff', '/pages/'
-    / %li=nav_link 'Blog', '/blog/'
+    %li
+      =nav_link 'Blog', '/blog/'
