Adding disqus comments to site

--- a/source/blog/2014/tdd-day-2.haml
+++ b/source/blog/2014/tdd-day-2.haml
@@ -17,4 +17,4 @@
 %p
   How many cases should I test? I only tested on the most basic (3, 5, 15, 1), since that seems to be the absolute minimum you could do and still have 100% code coverage. (Yes, I know we shouldn't always shoot for 100%, but since this is practice it seems like a good idea.) But on the Coders Dojo website they list a bunch more test cases (1, 2, 3, 4, 5, 6, 10, 15). Is that overkill? Am I under testing? How much is "enough" vs. "too much"?
 %p
-  Hopefully the next 28 days will help clear all this up for me! But if you have any suggestions/ feedback/ tips please let me know #{link_to '@lucykbain.', 'https://twitter.com/lucykbain'} (And hopefully I'll be able to get comments set up for this blog before then!)
+  Hopefully the next 28 days will help clear all this up for me! But if you have any suggestions/ feedback/ tips please let me know in the comments!
