--- a/source/blog/index.haml
+++ b/source/blog/index.haml
@@ -1,3 +1,7 @@
+---
+lucy: true
+---
+
 %h2= link_to 'TDD Day 1', '/blog/2014/tdd-day-1'
 %h2= link_to 'TDD Day 2', '/blog/2014/tdd-day-2'
 %h2= link_to 'TDD Day 3', '/blog/2014/tdd-day-3'
