Add in Code Resources mailing list

--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -6,7 +6,7 @@
 
 body
   background: $white
-  font-family: 'Nobile', sans-serif
+  font-family: $title-font
   color: $dark-gray
 
 a
@@ -35,3 +35,4 @@ b, strong, bold
 @import home
 @import content
 @import blog
+@import form
