--- a/source/stylesheets/variables.sass
+++ b/source/stylesheets/variables.sass
@@ -7,5 +7,10 @@ $white: #fff
 $light-gray: #888
 $dark-gray: #333
 $accent: #C93C67
+$light-accent: #e49db3
+
 $bold: 700
 $normal-weight: 400
+
+$title-font: 'Nobile', sans-serif
+$content-font: 'Crimson Text', sans-serif
