--- a/source/stylesheets/content.sass
+++ b/source/stylesheets/content.sass
@@ -6,14 +6,14 @@
   padding: 30px
   font-size: 26px
   line-height: 1.75em
-  font-family: 'Crimson Text', sans-serif
+  font-family: $content-font
   -webkit-font-smoothing:  antialiased
 
   p
     margin: 10px 0px 20px
 
   h1, h2, h3, h4
-    font-family: 'Nobile', sans-serif
+    font-family: $title-font
     font-weight: $normal-weight
 
   h1
