bit more mobile friendly

--- a/source/stylesheets/content.sass
+++ b/source/stylesheets/content.sass
@@ -9,6 +9,13 @@
   font-family: $content-font
   -webkit-font-smoothing:  antialiased
 
+  @media (max-width: $large-mobile)
+    padding: 20px, 30px
+    font-size: 22px
+  @media (max-width: $small-mobile)
+    padding: 15px
+    font-size: 18px
+
   p
     margin: 10px 0px 20px
 
@@ -28,6 +35,13 @@
   h3
     font-size: 1em
     margin: 40px 0px 0px
+
+  @media (max-width: $large-mobile)
+    h1, h2, h3
+      margin: 15px 0px 25px
+  @media (max-width: $small-mobile)
+    h1, h2, h3
+      margin: 10px 0px 20px
 
   li
     line-height: 1.75em
