--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -16,6 +16,8 @@
 @media (max-width: 600px)
   .personal-info
     margin: 60px auto 0px auto
+    .profile-pic
+      width: 250px
     .nav
       li
         display: block
