--- a/source/stylesheets/nav.sass
+++ b/source/stylesheets/nav.sass
@@ -8,7 +8,12 @@
   li
     display: inline
     margin-right: 15px
-    font-size: 24px
+    font-size: 20px
+    @media (max-width: $large-mobile)
+      font-size: 18px
+    @media (max-width: $small-mobile)
+      font-size: 16px
+
 
   li:last-child
     margin-right: 0px
