--- a/source/pages/code-resources-mailing-list.haml
+++ b/source/pages/code-resources-mailing-list.haml
@@ -12,15 +12,10 @@ summary: "A mailing list I run with links to other coding events around Sydney a
 :plain
   <!-- Begin MailChimp Signup Form -->
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-  <style type="text/css">
-    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-  </style>
   <div id="mc_embed_signup">
   <form action="http://facebook.us6.list-manage.com/subscribe/post?u=5ce2b6bdeb&amp;id=f857eb193b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   <div class="mc-field-group">
-    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+    <label for="mce-EMAIL">Email Address
   </label>
     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
   </div>
