--- a/source/index.haml
+++ b/source/index.haml
@@ -15,4 +15,5 @@
         =link_to 'Stackoverflow', 'http://stackoverflow.com/users/863846/lucy-bain'
       %li
         =link_to 'Facebook', 'https://www.facebook.com/LucyKBain'
-
+      %li
+        =link_to 'Job', '/pages/job'
