--- a/source/stylesheets/content.sass
+++ b/source/stylesheets/content.sass
@@ -3,21 +3,21 @@
 .content
   margin: 0px auto
   max-width: 700px
-  padding: 30px
-  font-size: 26px
-  line-height: 1.75em
+  padding: 20px 40px
+  font-size: 1em
+  line-height: 1.55em
   font-family: $content-font
   -webkit-font-smoothing:  antialiased
 
   @include respond(medium)
-    padding: 20px, 30px
+    padding: 20px 30px
     font-size: 22px
   @include respond(small)
     padding: 15px
     font-size: 18px
 
   p
-    margin: 10px 0px 20px
+    margin-bottom: 20px
 
   h1, h2, h3, h4
     font-family: $title-font
@@ -30,11 +30,11 @@
 
   h2
     font-size: 1.5em
-    margin: 40px 0px 0px
+    margin: 40px 0px 20px
 
   h3
     font-size: 1em
-    margin: 40px 0px 0px
+    margin: 40px 0px 20px
 
   h1, h2, h3
     @include respond(medium)
