--- a/source/stylesheets/variables.sass
+++ b/source/stylesheets/variables.sass
@@ -16,7 +16,7 @@ $content-font: 'Crimson Text', sans-serif
 
 
 @function generate_media_query($pixels)
-  @return "(max-width: #{$pixels}), only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: #{$pixels * 2}), only screen and (min--moz-device-pixel-ratio: 2) and (max-width: #{$pixels * 2}), only screen and (-o-min-device-pixel-ratio: 2/1) and (max-width: #{$pixels * 2}), only screen and (min-device-pixel-ratio: 2) and (max-width: #{$pixels * 2}), only screen and (min-resolution: 192dpi) and (max-width: #{$pixels * 2}), only screen and (min-resolution: 2dppx) and (max-width: #{$pixels * 2})"
+  @return "(max-width: #{$pixels})"
 
 
 
