rename from 'pages' to 'resources'

--- a/source/index.haml
+++ b/source/index.haml
@@ -16,4 +16,4 @@
       %li
         =link_to 'Facebook', 'https://www.facebook.com/LucyKBain'
       %li
-        =link_to 'Job', '/pages/job'
+        =link_to 'Job', '/resources/job'
