--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -1,15 +1,12 @@
-// Yanone Kaffeesatz - for title font
 @import normalize
 
 @import variables
-
-
 
 body
   background: $white
   font-family: $title-font
   color: $dark-gray
-  font-size: 26px
+  font-size: 20px
 
 a
   text-decoration: none
@@ -32,6 +29,7 @@ b, strong, bold
     margin: 0px
 
 @import nav
+@import slicknav
 @import header
 @import posts
 @import home
