--- a/source/stylesheets/normalize.sass
+++ b/source/stylesheets/normalize.sass
@@ -1,6 +1,10 @@
 p, h1, h2, h3, h4
   margin: 0px
 
+ul
+  li
+    list-style-type: none
+
 /*! normalize.css v2.1.2 | MIT License | git.io/normalize
 
 /* ==========================================================================
