--- a/source/stylesheets/variables.sass
+++ b/source/stylesheets/variables.sass
@@ -1,4 +1,4 @@
-$small-size: 400px
+$small-size: 410px
 $medium-size: 900px
 $large-size: 1200px
 
@@ -6,7 +6,8 @@ $white: #fff
 $light-gray: #888
 $dark-gray: #333
 $accent: #C93C67
-$light-accent: #e49db3
+$light-accent: lighten($accent, 40)
+$very-light-accent: #f9ebef
 
 $bold: 700
 $normal-weight: 400
