--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -5,6 +5,7 @@
     %meta{charset: "utf-8"}
     %meta{content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
     %link{href: "images/favicon.ico", rel: "icon", type: "image/ico"}
+
     %link{href: "http://fonts.googleapis.com/css?family=Crimson+Text:400,700|Nobile:400,700", rel: "stylesheet", type: "text/css"}
     %title= current_page.data.title || "Lucy Bain"
     = stylesheet_link_tag "application"
@@ -12,5 +13,9 @@
     = javascript_include_tag  "all"
   %body{class: page_classes}
     = partial "layouts/shared/header"
-    = yield
+    .content
+      = yield
     =# partial "layouts/shared/footer"
+  %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"}
+  %script{src: "javascripts/jquery.slicknav.min.js"}
+  %script{src: "javascripts/all.js"}
