--- a/source/layouts/shared/_header.haml
+++ b/source/layouts/shared/_header.haml
@@ -1,6 +1,8 @@
 .header
-  %ul.nav
+  %ul.nav#menu
     %li
-      =nav_link 'Me', '/'
+      =nav_link 'Connect with me', '/'
+    %li
+      =nav_link 'My job', '/resources/job/'
     %li
       =nav_link 'Resources', '/resources/'
