make the mobile menu work on more than just the home page

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -17,5 +17,5 @@
       = yield
     =# partial "layouts/shared/footer"
   %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"}
-  %script{src: "javascripts/jquery.slicknav.min.js"}
-  %script{src: "javascripts/all.js"}
+  %script{src: "/javascripts/jquery.slicknav.min.js"}
+  %script{src: "/javascripts/all.js"}
