--- a/source/resources/code-resources-mailing-list.haml
+++ b/source/resources/code-resources-mailing-list.haml
@@ -1,5 +1,6 @@
 ---
 summary: "A mailing list I run with links to other coding events around Sydney and links to coding resources."
+draft: true
 ---
 
 %h1
