--- a/source/resources/udacity-python-study-group.haml
+++ b/source/resources/udacity-python-study-group.haml
@@ -5,11 +5,16 @@ summary: "I'd like to start a study group for the Udacity Programming 101 course
 %h1
   Udacity Python Study Group
 %p
-  Through my work with #{link_to 'Rails Girls', 'http://railsgirls.com/'} and #{link_to 'DevHub', 'http://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/'} I meet a lot of people who are starting out on their coding journey. Usually I just get to meet them once or twice. Often I never see them again, and I always wonder if they stopped pursuing code, or just going to the group, or what happened. I know learning to code isn't for everyone, but I also know that learning anything new takes a lot of support, patience, and long hours.
+  Through my work with #{link_to 'Rails Girls', 'http://railsgirls.com/'} and #{link_to 'DevHub', 'http://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/'} I meet a lot of people who are starting out on their coding journey. Usually I only get to meet them once or twice. Often I never see them again. I always wonder if they stopped pursuing code, or just going to the group, or what happened. I know learning to code isn't for everyone, but I also know that learning anything new takes a lot of support, patience, and long hours.
 %p
   I've wanted to start a beginner's programming group for a while, but I haven't been sure how it would work, where I would get the materials from, or if people would be interested. Then I remembed Udacity's #{link_to 'Programming 101', 'https://www.udacity.com/course/cs101'}, and thought it would be the perfect way to get started! The videos are always available (so learning can fit into your schedule), it's pretty interactive (so you can't just zone out and say you "watched" this week's lesson), and you end up with actual code (so you feel like you've made something). That said, Udacity misses out on the human element - it's not as easy to talk to your classmates. I've found it harder to stay motivated when I don't actually <em>have</em> to go to class or turn anything in...
 
-%h2 So here's the deal
+%h2 The idea
+%p
+  I would love to run a weekly study group where we can talk about what was covered in the Udacity lecture that week. We would work through some of the exercises (homework) together, and try to help each other out. I'm a full time Ruby on Rails developer, so I have programming experience. I've also done a bit of programming in Python, but not a lot, and not for a while. I'd like a refresher course myself.
+
+%h2 The deal
+
 %ul
   %li I will run a study group once a week for the Udacity Programming 101
   %li You are responsible for watching that week's lesson video
@@ -19,14 +24,20 @@ summary: "I'd like to start a study group for the Udacity Programming 101 course
 
 %h3 Cost
 %p
-  The study group is <em>free</em>, I'm not brining a lot to the table here - I know Ruby and Rails, and I've done a tiny bit of Python, but really I'm just an organiser. This group is about us all helping each other out and getting through the course. I'm not trying to make money off you.
+  The study group is <em>free</em>, I'm not bringing a lot to the table here - I know Ruby and Rails, and I've done a bit of Python, but really I'm just an organiser. This group is about us all helping each other and getting through the course. I'm not trying to make money off you.
 %p
   <em>But</em> I believe money can be a strong motivating factor. I don't want to start with a group and end up with just me. I'm looking to you guys to hold me accountable for showing up, and I'm investing a certain amount of time getting this whole thing off the ground. It's not fair to me or the group if you sign up, take up a space, and then drop out right away (or never show). I believe you're more likely to attend an event you pay for.
 
   %p
-    "Wait, but you just said it was free!" And it is, <em>if</em> you show up. At the start of the study group everyone will pay in $150. If you show up to 6 of the 7 meetings (because I understand that life happens), you'll get all $150 back. But if you miss 2 meetings, you'll only get $100, 3 misses = $50 back, and 4 or more misses (which means you only came to 3 meetings) and you don't get any money back. Yes, it's a bit harsh, it's supposed to be, I want you to actually show up.
+    "Wait, but you just said it was free!"
   %p
-    "What happens to the money at the end - you said you weren't trying to make money!" I'm not, I promise! At the end of the 7 weeks I'll divy up any money from people who dropped out or missed sessions. I might have pizza at the last study group, or I might buy a copy of particular programming book for everyone. Depending on how much is left I might even pay out a bit to everyone left (as in, you could actually make money!). I'll let you know closer to the end of the group what's going to happen - it'll depend on how much is left.
+    And it is, <em>if</em> you show up. At the start of the study group everyone will pay in $150. If you show up to 6 of the 7 meetings you'll get all $150 back (because I understand that life happens). But if you miss 2 meetings, you'll only get $100, 3 misses = $50 back, and 4 or more misses (which means you only came to 3 meetings) and you don't get any money back. It might be a bit harsh, it's supposed to be, I want you to actually show up.
+  %p
+    "What happens to the money at the end - you said you weren't trying to make money!"
+  %p
+    At the end of the 7 weeks I will divy up any money from people who dropped out or missed too many sessions between the members who came to all 7 sessions (including myself, because that seems fair) up to $100 per person. Yes, that's right, you could actually make money from doing this. (If this model looks familiar it's because I've stolen it from #{link_to 'Gym Pact', 'http://www.gym-pact.com'}.)
+  %p
+    Anything left over from that would be used for bonus stuff for the group - I might have pizza at the last study group, or I might buy a copy of particular programming book for everyone. I'll let you know closer to the end of the group what's going to happen - it'll depend on how much is left.
 
 
 %h2 Ok, sign me up!
