Better study group listing

--- a/source/stylesheets/content.sass
+++ b/source/stylesheets/content.sass
@@ -41,5 +41,8 @@
     @include respond(small)
       margin: 20px 0px 0px
 
+  ul
+    padding-left: 40px
   li
     line-height: 1.75em
+    list-style-type: disc
