--- a/source/resources/udacity-python-study-group.haml
+++ b/source/resources/udacity-python-study-group.haml
@@ -11,14 +11,16 @@ summary: "I'd like to start a study group for the Udacity Programming 101 course
 
 %h2 The idea
 %p
-  I would love to run a weekly study group where we can talk about what was covered in the Udacity lecture that week. We would work through some of the exercises (homework) together, and try to help each other out. I'm a full time Ruby on Rails developer, so I have programming experience. I've also done a bit of programming in Python, but not a lot, and not for a while. I'd like a refresher course myself.
+  I would love to run a weekly study group where we can talk about what was covered in the Udacity lecture that week. We would work through some of the exercises (homework) together, and try to clear up any confusion from the lecture - generally help each other out. I'm a full time Ruby on Rails developer, so I have programming experience. I've also done a bit of programming in Python, but not a lot, and not for a while. I'd like a refresher course myself.
+%p
+  The group should be 10-16 people so we can work in pairs on the exercises. I'm also shooting for at least 50% women (because, as a woman in tech, I'm interested in getting other women into tech too). My goal is to start some time in early-mid March
 
 %h2 The deal
 
 %ul
-  %li I will run a study group once a week for the Udacity Programming 101
+  %li I will organise a study group once a week for the Udacity Programming 101
   %li You are responsible for watching that week's lesson video
-  %li We will start that week's homework at the study group and discuss any problems/questions that come up
+  %li We will start that week's homework at the study group and discuss any problems and questions that come up
   %li If you weren't able to finish it at the meeting you are responsible for finishing that week's homework on your own
   %li We will go through the base course (7 weeks), and then decide if we want to continue and do weeks 8-11
 
@@ -26,25 +28,30 @@ summary: "I'd like to start a study group for the Udacity Programming 101 course
 %p
   The study group is <em>free</em>, I'm not bringing a lot to the table here - I know Ruby and Rails, and I've done a bit of Python, but really I'm just an organiser. This group is about us all helping each other and getting through the course. I'm not trying to make money off you.
 %p
-  <em>But</em> I believe money can be a strong motivating factor. I don't want to start with a group and end up with just me. I'm looking to you guys to hold me accountable for showing up, and I'm investing a certain amount of time getting this whole thing off the ground. It's not fair to me or the group if you sign up, take up a space, and then drop out right away (or never show). I believe you're more likely to attend an event you pay for.
+  <em>But</em> I believe money can be a strong motivating factor. I don't want to start with a group and end up with just me. I'm looking to you guys to hold me accountable for showing up, and I'm investing a certain amount of time getting this whole thing off the ground. It's not fair to me or the group if you sign up and then drop out right away (or never show). You're more likely to attend an event you pay for.
 
   %p
     "Wait, but you just said it was free!"
   %p
     And it is, <em>if</em> you show up. At the start of the study group everyone will pay in $150. If you show up to 6 of the 7 meetings you'll get all $150 back (because I understand that life happens). But if you miss 2 meetings, you'll only get $100, 3 misses = $50 back, and 4 or more misses (which means you only came to 3 meetings) and you don't get any money back. It might be a bit harsh, it's supposed to be, I want you to actually show up.
   %p
+    If $150 is really too much for you (and it's not just that you don't want to pay because you think you're likely to drop out), I'm happy to make exceptions for people with a track record of being interested in programming (aka, I don't think you'll flake out). Education should be available to everyone, which is a core part of Udacity's free classes.
+  %p
     "What happens to the money at the end - you said you weren't trying to make money!"
   %p
-    At the end of the 7 weeks I will divy up any money from people who dropped out or missed too many sessions between the members who came to all 7 sessions (including myself, because that seems fair) up to $100 per person. Yes, that's right, you could actually make money from doing this. (If this model looks familiar it's because I've stolen it from #{link_to 'Gym Pact', 'http://www.gym-pact.com'}.)
+    At the end of the 7 weeks I will divy up any money from people who dropped out or missed too many sessions between the members who came to all 7 sessions (including myself, because that seems fair) up to $75 per person. Yes, that's right, you could actually make money from doing this. (If this model looks familiar it's because I've stolen it from #{link_to 'Gym Pact', 'http://www.gym-pact.com'}.) Anything left over from that would be used for bonus stuff for the group - I might have pizza at the last study group, or I might buy a copy of particular programming book for everyone. I'll let you know closer to the end of the group what's going to happen - it'll depend on how much is left.
   %p
-    Anything left over from that would be used for bonus stuff for the group - I might have pizza at the last study group, or I might buy a copy of particular programming book for everyone. I'll let you know closer to the end of the group what's going to happen - it'll depend on how much is left.
+    It's worth noting that this means you could benifite if you fellow group members drop out. So you're kind of motivated to discourage them from attending and generally being awful. Please don't do this. The group is about supporting each other, and the payment system is only in place to help motivate people. If you happen to get money at the end, it's a bonus, not the goal.
 
-
-%h2 Ok, sign me up!
+%h3 Don't give money to randoms on the internet
 %p
-  So if you're a programming newbie, or are new to python with programming experience, and want to do the Udacity Programming 101 course with a study group then
+  I understand that you're hesitant to just give me $150. Who am I? Why should you trust me? Will I actually give you your money back? These are all very good questions. Honestly, I'm not sure how to prove myself other than saying "I'm nice and trustworthy" which is easy to say. So I'm offering to meet anyone who wants to verify I'm a real person before you hand over your money. I'm guessing a fair number of you know me already, so you might not need to meet again. But I'm hoping some applicants will be new faces, and I'm happy to have a quick coffee or something. I'll also send out some kind of contract thing with the terms clearly written out. We'll sign them at the first meeting.
+
+
+%h2 The form
+%p
+  If I've sold you on the idea (and I hope I have!) then it's time to apply. I have no idea how many people will be interested, so I've made a form just to collect emails and such. There is <em>no commitment</em> associated with filling out this form. That said, please respect my time and only fill it out if this is something you're really excited about.
 
 :plain
-
-
-%p I promise I won't spam you! I won't send messages more than once a week (unless I find something that's coming up that week), and I'll do my best to keep all the information relevant to learning code, and the events local to Sydney. And of course you can unsubscribe at any time. But hopefully you find it useful, and maybe contribute something too!
+  <iframe src="https://docs.google.com/forms/d/1fq0VDEJ8isgoQPR3EaR3Dpji9fdktBAOFU3r2Cu4d4s/viewform?embedded=true" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0" style="
+    margin-left: 10px;">Loading...</iframe>
