--- a/source/resources/index.haml
+++ b/source/resources/index.haml
@@ -1,4 +1,4 @@
-- ['udacity-python-study-group', 'programming-community-in-sydney', 'git-info', 'setting-up-sublime-autosave'].each do |page_title|
+- ['programming-community-in-sydney', 'git-info', 'setting-up-sublime-autosave'].each do |page_title|
   - current_page.children.each do |p|
     - next unless path_to_file_name(p.path) == page_title
     - next if p.data.draft.present? and p.data.draft
