Small copy changes

--- a/source/resources/git-info.haml
+++ b/source/resources/git-info.haml
@@ -4,7 +4,7 @@ summary: "Helpful links about Git and Github."
 
 .links
   %h1
-    Links
+    Links about Git
   %ol
     %li
       Official website for
