--- a/source/resources/programming-community-in-sydney.haml
+++ b/source/resources/programming-community-in-sydney.haml
@@ -3,17 +3,17 @@ summary: "Who to follow and where to look for community events."
 ---
 
 %h1
-  Programming Community
+  Programming Community in Sydney
 %h2 Ruby on Rails
 %ul
   %li
-    Ruby on Rails Oceania Sydney (roro) -
+    Ruby on Rails Oceania (roro) -
     =link_to 'meetup', 'http://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/'
   %li
     Rails Camp Australia -
     =link_to '@railscamp_au', 'https://twitter.com/railscamp_au'
   %li
-    RailsGirls Au -
+    RailsGirls Australia -
     = link_to '@railsgirlsau', 'https://twitter.com/railsgirlsau'
 %h2 Everything else
 %ul
