--- a/source/resources/setting-up-sublime-autosave.haml
+++ b/source/resources/setting-up-sublime-autosave.haml
@@ -21,3 +21,10 @@ summary: "How to set up Sublime's autosave"
     Add this line
     %pre
       { "save_on_focus_lost": true }
+  %li
+    Save the file
+  %li
+    Close the file
+
+%p
+  That's it! Now whenever you click away from a particular file in Sublime it will save. No more forgetting - now it's up to the computer to remember!
