updated Udacity offer after Greg's feedback

--- a/source/resources/udacity-python-study-group.haml
+++ b/source/resources/udacity-python-study-group.haml
@@ -7,13 +7,13 @@ summary: "I'd like to start a study group for the Udacity Programming 101 course
 %p
   Through my work with #{link_to 'Rails Girls', 'http://railsgirls.com/'} and #{link_to 'DevHub', 'http://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/'} I meet a lot of people who are starting out on their coding journey. Usually I only get to meet them once or twice. Often I never see them again. I always wonder if they stopped pursuing code, or just going to the group, or what happened. I know learning to code isn't for everyone, but I also know that learning anything new takes a lot of support, patience, and long hours.
 %p
-  I've wanted to start a beginner's programming group for a while, but I haven't been sure how it would work, where I would get the materials from, or if people would be interested. Then I remembered Udacity's #{link_to 'Programming 101', 'https://www.udacity.com/course/cs101'}, and thought it would be the perfect way to get started! The videos are always available (so learning can fit into your schedule), it's pretty interactive (so you can't just zone out and say you "watched" this week's lesson), and you end up with actual code (so you feel like you've made something). That said, Udacity misses out on the human element - it's not as easy to talk to your classmates. I've found it harder to stay motivated when I don't actually <em>have</em> to go to class or turn anything in...
+  I've wanted to start a beginner's programming group for a while, but I haven't been sure how it would work, where I would get the materials from, or if people would be interested. Then I remembered Udacity's #{link_to 'Programming 101', 'https://www.udacity.com/course/cs101'}, and thought it would be the perfect way to get started! The videos are always available (so learning can fit into your schedule), it's pretty interactive (so you can't just zone out and say you "watched" this week's lesson), and you end up with actual code (so you feel like you've made something). That said, Udacity misses out on the human element - it's not as easy to talk to your classmates. I've also found it harder to stay motivated when I don't actually <em>have</em> to go to class or turn anything in...
 
 %h2 The idea
 %p
-  I would love to run a weekly study group where we can talk about what was covered in the Udacity lecture that week. We would work through some of the exercises (homework) together, and try to clear up any confusion from the lecture - generally help each other out. I'm a full time Ruby on Rails developer, so I have programming experience. I've also done a bit of programming in Python, but not a lot, and not for a while. I'd like a refresher course myself.
+  I would love to run a weekly study group where we can talk about what was covered in the Udacity lecture that week. We would work through some of the exercises (homework) together, and try to clear up any confusion from the lecture - just help each other out. I'm a Ruby on Rails developer, so I have programming experience. I've also done a bit of programming in Python, but not a lot, and not for a while. I'd like a refresher course myself.
 %p
-  The group should be 10-16 people so we can work in pairs on the exercises. I'm also shooting for at least 50% women (because, as a woman in tech, I'm interested in getting other women into tech too). My goal is to start some time in early-mid March
+  The group should be 10-12 people so we can work in pairs on the exercises. The max size of 12 is set because of a space constraint at my office. I would love to work with more of you, but there just aren't enough seat around the table for everyone. I'm really sorry about this, but it's out of my control. I'm also shooting for at least 50% women (because, as a woman in tech, I'm interested in getting other women into tech too). Start date is March 10.
 
 %h2 The deal
 
@@ -28,29 +28,34 @@ summary: "I'd like to start a study group for the Udacity Programming 101 course
 %p
   The study group is <em>free</em>, I'm not bringing a lot to the table here - I know Ruby and Rails, and I've done a bit of Python, but really I'm just an organiser. This group is about us all helping each other and getting through the course. I'm not trying to make money off you.
 %p
-  <em>But</em> I believe money can be a strong motivating factor. I don't want to start with a group and end up with just me. I'm looking to you guys to hold me accountable for showing up, and I'm investing a certain amount of time getting this whole thing off the ground. It's not fair to me or the group if you sign up and then drop out right away (or never show). You're more likely to attend an event you pay for.
+  <em>But</em> I believe money can be a motivating factor. I don't want to start with a group and end up with just me. I'm looking to you guys to hold me accountable for showing up, and I'm investing a certain amount of time getting this whole thing off the ground. It's not fair to me or the group if you sign up and then drop out right away (or never show). You're more likely to attend an event you pay for.
 
   %p
     "Wait, but you just said it was free!"
   %p
-    And it is, <em>if</em> you show up. At the start of the study group everyone will pay in $150. If you show up to 6 of the 7 meetings you'll get all $150 back (because I understand that life happens). But if you miss 2 meetings, you'll only get $100, 3 misses = $50 back, and 4 or more misses (which means you only came to 3 meetings) and you don't get any money back. It might be a bit harsh, it's supposed to be, I want you to actually show up.
+    And it is, <em>if</em> you show up.
   %p
-    If $150 is really too much for you (and it's not just that you don't want to pay because you think you're likely to drop out), I'm happy to make exceptions for people with a track record of being interested in programming (aka, I don't think you'll flake out). Education should be available to everyone, which is a core part of Udacity's free classes.
+    If you're interested, try watching the first Udacity lecutre. This is aimed at being a college level course, make sure you're ready for it. We'll have an initial meeting after Lecture 1 to work on those homework problems and to discuss the new concepts brought up in the lecture.
+  %p
+    After the first course, everyone who is still interested will pay in $50. If you show up to 5 of the remaining 6 meetings you'll get all $50 back. (I understand that life happens so you get one free pass.) But for every meeting you miss after that you get $10 less back (attend 4 more meetings, get $40, 3 more, $30, 2 more $20, 1 more $10). This might be a bit harsh, it's supposed to be, I want you to actually show up.
+  %p
+    If $50 is really too much for you (and it's not just that you don't want to pay because you think you're likely to drop out), I'm happy to make exceptions for people with a track record of being interested in programming (a.k.a., I don't think you'll flake out). Education should be available to everyone, which is a core part of Udacity's free classes.
   %p
     "What happens to the money at the end - you said you weren't trying to make money!"
   %p
-    At the end of the 7 weeks I will divvy up any money from people who dropped out or missed too many sessions between the members who came to all 7 sessions (including myself, because that seems fair) up to $75 per person. Yes, that's right, you could actually make money from doing this. (If this model looks familiar it's because I've stolen it from #{link_to 'Gym Pact', 'http://www.gym-pact.com'}.) Anything left over from that would be used for bonus stuff for the group - I might have pizza at the last study group, or I might buy a copy of particular programming book for everyone. I'll let you know closer to the end of the group what's going to happen - it'll depend on how much is left.
+    At the end of the 7 weeks I will divvy up any money from people who missed additional sessions between the members who came to all 7 sessions (including myself, because that seems fair) up to $25 per person. Yes, that's right, you could actually make money from doing this. (If this model looks familiar it's because I've stolen it from #{link_to 'Gym Pact', 'http://www.gym-pact.com'}.) Anything left over from that would be used for bonus stuff for the group - I might have pizza at the last study group, or I might buy a copy of particular programming book for everyone. I'll let you know closer to the end of the group what's going to happen - it'll depend on how much is left.
   %p
     It's worth noting that this means you could benefit if you fellow group members drop out. So you're kind of motivated to discourage them from attending and generally being awful. Please don't do this. The group is about supporting each other, and the payment system is only in place to help motivate people. If you happen to get money at the end, it's a bonus, not the goal.
 
 %h3 Don't give money to randoms on the internet
 %p
-  I understand that you're hesitant to just give me $150. Who am I? Why should you trust me? Will I actually give you your money back? These are all very good questions. Honestly, I'm not sure how to prove myself other than saying "I'm nice and trustworthy" which is easy to say. So I'm offering to meet anyone who wants to verify I'm a real person before you hand over your money. I'm guessing a fair number of you know me already, so you might not need to meet again. But I'm hoping some applicants will be new faces, and I'm happy to have a quick coffee or something. I'll also send out some kind of contract thing with the terms clearly written out. We'll sign them at the first meeting.
-
+  I understand that you're unwilling to just give me $50. Who am I? Why should you trust me? Will I actually give you your money back? These are all very good questions. Honestly, I'm not sure how to prove myself other than saying "I'm nice and trustworthy" which is easy to say. You'll be able to meet me at the first meeting, and I'm guessing most of you would have met me before.  I'll have some kind of contract thing with the terms clearly written out after the first meeting. If you're still keen then, fill it out and return it to me.
 
 %h2 The form
 %p
-  If I've sold you on the idea (and I hope I have!) then it's time to apply. I have no idea how many people will be interested, so I've made a form just to collect emails and such. There is <em>no commitment</em> associated with filling out this form. That said, please respect my time and only fill it out if this is something you're really excited about.
+  If I've sold you on the idea (and I hope I have!) then it's time to give me your email address. I have no idea how many people will be interested, so I've made a form just to collect emails and such. There is <em>no commitment</em> associated with filling out this form. That said, please respect my time and only fill it out if this is something you're really excited about.
+%p
+  If more than 12 are interested I'll send out an email letting you know who has been selected. Again, this is a space issue, nothing personal.
 
 :plain
   <iframe src="https://docs.google.com/forms/d/1fq0VDEJ8isgoQPR3EaR3Dpji9fdktBAOFU3r2Cu4d4s/viewform?embedded=true" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0" style="
