--- a/source/layouts/blog.haml
+++ b/source/layouts/blog.haml
@@ -1,26 +1,41 @@
 - wrap_layout :layout do
   = yield
 
-  - if not current_page.data.lucy
-    #disqus_thread
-    :javascript
-      var disqus_shortname = 'lucybain';
-      (function() {
-          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
-    %noscript
-      Please enable JavaScript to view the
-      %a{href: "http://disqus.com/?ref_noscript"} comments powered by Disqus.
-    %a.dsq-brlink{href: "http://disqus.com"}
-      comments powered by
-      %span.logo-disqus Disqus
-    :javascript
-      var disqus_shortname = 'lucybain';
-      (function () {
-          var s = document.createElement('script'); s.async = true;
-          s.type = 'text/javascript';
-          s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-          (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-      }());
+  #disqus_thread
+  :javascript
+    var disqus_shortname = 'lucybain';
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+  %noscript
+    Please enable JavaScript to view the
+    %a{href: "http://disqus.com/?ref_noscript"} comments powered by Disqus.
+  %a.dsq-brlink{href: "http://disqus.com"}
+    comments powered by
+    %span.logo-disqus Disqus
+  :javascript
+    var disqus_shortname = 'lucybain';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+
+  %aside
+    %h4 Recent Articles
+    %ol
+      - blog.articles[0...10].each do |article|
+        %li
+          = link_to article.title, article
+          %span= article.date.strftime('%b %e')
+    %h4 Tags
+    %ol
+      - blog.tags.each do |tag, articles|
+        %li= link_to "#{tag} (#{articles.size})", tag_path(tag)
+    %h4 By Year
+    %ol
+      - blog.articles.group_by {|a| a.date.year }.each do |year, articles|
+        %li= link_to "#{year} (#{articles.size})", blog_year_path(year)
